[gd_scene load_steps=28 format=2]

[ext_resource path="res://assets/art/player/player_walk1.png" type="Texture" id=1]
[ext_resource path="res://assets/art/player/player_walk2.png" type="Texture" id=2]
[ext_resource path="res://assets/art/player/player_walk3.png" type="Texture" id=3]
[ext_resource path="res://assets/art/player/player_walk4.png" type="Texture" id=4]
[ext_resource path="res://src/Player.gd" type="Script" id=5]
[ext_resource path="res://assets/art/player/player_stand2.png" type="Texture" id=6]
[ext_resource path="res://assets/art/player/player_attack3.png" type="Texture" id=7]
[ext_resource path="res://assets/art/player/player_attack4.png" type="Texture" id=8]
[ext_resource path="res://assets/art/player/player_stand1.png" type="Texture" id=9]
[ext_resource path="res://assets/art/player/player_attack1.png" type="Texture" id=10]
[ext_resource path="res://assets/art/player/player_attack2.png" type="Texture" id=11]
[ext_resource path="res://assets/art/player/player_jump3.png" type="Texture" id=12]
[ext_resource path="res://assets/art/player/player_skill3.png" type="Texture" id=13]
[ext_resource path="res://assets/art/player/player_skill4.png" type="Texture" id=14]
[ext_resource path="res://assets/art/player/player_skill1.png" type="Texture" id=15]
[ext_resource path="res://assets/art/player/player_jump4.png" type="Texture" id=16]
[ext_resource path="res://assets/art/player/player_skill2.png" type="Texture" id=17]
[ext_resource path="res://assets/art/player/attack/sword_motion2.png" type="Texture" id=18]
[ext_resource path="res://assets/art/player/attack/sword_motion1.png" type="Texture" id=19]
[ext_resource path="res://assets/art/player/attack/sword_motion3.png" type="Texture" id=20]
[ext_resource path="res://assets/art/player/attack/sword_motion8.png" type="Texture" id=21]
[ext_resource path="res://assets/art/player/attack/sword_motion6.png" type="Texture" id=22]
[ext_resource path="res://assets/art/player/attack/sword_motion4.png" type="Texture" id=23]
[ext_resource path="res://assets/art/player/attack/sword_motion7.png" type="Texture" id=24]
[ext_resource path="res://assets/art/player/attack/sword_motion5.png" type="Texture" id=25]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 19 ), ExtResource( 18 ), ExtResource( 20 ), ExtResource( 23 ), ExtResource( 25 ), ExtResource( 22 ), ExtResource( 24 ), ExtResource( 21 ) ],
"loop": true,
"name": "slash",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 17 ), ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "skill",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 6 ) ],
"loop": true,
"name": "stand",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ) ],
"loop": true,
"name": "fall",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 52.127
height = 17.1428

[node name="Player" type="KinematicBody2D"]
position = Vector2( 510.457, 351.427 )
collision_mask = 8
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "stand"
frame = 1
speed_scale = 3.0
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -25.9568, 1.58919 )
shape = SubResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 48, 4 )

[node name="SkillDelay" type="Timer" parent="."]
wait_time = 0.5

[node name="Camera2D" type="Camera2D" parent="."]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="SkillDelay" to="." method="_on_SkillDelay_timeout"]
